# prophet

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
clients/typescript/: .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
clients/typescript/src/: client.ts  errors.ts  index.ts  types.ts
clients/typescript/test/: client.test.ts
dashboard/: app.py
docs/: crossbar-verdict.md  ecosystem-plan.md  macro-integration.md  phase-1-results.md  phase-2-results.md  phase-3-results.md  phase-4-decision.md  phase-5-domain.md  phase-5-market-results.md  phase-6-results.md
notebooks/: 00_explore_m4.ipynb
scripts/: download_m4.py  entrypoint.sh  ingest_bellwether.py  ingest_cashflow.py  ingest_crossbar.py  ingest_macro.py  ingest_market.py  monitor_macro.py  record_actuals.py  run_benchmark.py  train_production.py
src/prophet/: __init__.py  cli.py  config.py
src/prophet/api/: main.py  routes.py
src/prophet/data/: domains.py  loaders.py  market.py
src/prophet/evaluation/: benchmarks.py  cross_validation.py  metrics.py
src/prophet/experiments/: tracking.py
src/prophet/models/: baselines.py  ml.py  neural.py  statistical.py
src/prophet/monitoring/: __init__.py  drift.py  schema.py  store.py
src/prophet/serving/: __init__.py  registry.py
tests/: conftest.py  test_api.py  test_baselines.py  test_benchmarks.py  test_cross_validation.py  test_domains.py  test_loaders.py  test_metrics.py  test_ml.py  test_monitoring.py  test_neural.py  test_serving.py  test_statistical.py  test_store_market.py
