[project]
name = "prophet"
version = "0.1.0"
description = "Production-grade time-series forecasting system benchmarked against M4/M5 competition data, deployable as a monitored API service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Will Foreman", email = "wpf002@users.noreply.github.com" }]

dependencies = [
    # Nixtla forecasting suite
    "statsforecast>=2.0.0",
    "mlforecast>=1.0.0",
    "neuralforecast>=2.0.0",
    "hierarchicalforecast>=1.0.0",
    "utilsforecast>=0.2.0",
    # Data
    "polars>=1.20.0",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    # ML utilities
    "lightgbm>=4.5.0",
    "scikit-learn>=1.6.0",
    "optuna>=4.1.0",
    # Experiment tracking
    "mlflow>=2.20.0",
    # Serving
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # CLI + UX
    "typer>=0.15.0",
    "rich>=13.9.0",
    # Misc
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "datasetsforecast>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[project.scripts]
prophet = "prophet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prophet"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src/prophet --cov-report=term-missing"
asyncio_mode = "auto"
